# iot-server-api

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  cert.pem  init.sql  key8.pem  reset_database.sh  run.sh
migrations/2024-08-24-092434_create_users/: down.sql  up.sql
migrations/2024-11-13-041744_create_hardwares/: down.sql  up.sql
src/: app.rs  constant.rs  constants.rs  db.rs  error.rs  main.rs  mqtt.rs  schema.rs  secure.rs  unsecure.rs  utils.rs
src/constant/: config.rs  messages.rs  mod.rs  query.rs
src/controllers/: hardwares.rs  users.rs
src/database/: feeds.rs  hardwares.rs  mod.rs  nodes.rs  run_query_dsl_ext.rs  users.rs
src/handlers/: feed.rs  hardwares.rs  mod.rs  nodes.rs  users.rs
src/models/: feeds.rs  hardwares.rs  jwt.rs  mod.rs  nodes.rs  response.rs  token.rs  users.rs
src/routes/: hardwares.rs  middlewares.rs  mod.rs  users.rs
src/services/: hardware.rs  mod.rs  users.rs
src/utils/: auth.rs  http.rs  mod.rs
