[package]
name = "iot-server-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "2.0", features = ["tokio"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.99.17"
bcrypt = "0.14.0"
jsonwebtoken = "8.3.0"
sonic-rs = "0.3"
diesel-async = { version = "0.5.2", features = ["postgres", "pool", "deadpool"] }

[dependencies.diesel]
version = "2.2.0"
features = ["chrono"]

[dependencies.chrono]
version = "0.4.26"
features = ["serde"]
