[package]
name = "iot-server-api"
version = "0.2.0"
edition = "2021"

[dependencies]
atoi = "2.0"
sonic-rs = "0.3.16"
ntex = { version = "2.8", features = ["tokio"] }
mimalloc = { version = "0.1.25", default-features = false }
serde = { version = "1", features = ["derive"] }
nanorand = { version = "0.7", default-features = false, features = ["std", "wyrand", "tls"] }
tokio-postgres = { version = "0.7", features = ["runtime"] }
core_affinity = "0.8"
yarte = { version = "0.15", features = ["bytes-buf", "json"] }
ntex-bytes = { version = "0.1.21", features=["simd"] }
buf-min = { version = "0.7", features = ["ntex-bytes"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
gxhash = "3.4.1"